prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-http
  labels:
    app: prometheus
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - port: 9090
      protocol: TCP
      name: prometheus
